# toy-agent

./: .gitignore  README.md  agents.md  pyproject.toml
.session/: 2026-04-27T12-16-15.json  2026-04-27T12-23-58.json  2026-04-27T12-43-35.json
docs/: architecture-overview.md  session-system.md  tool-system.md  ui-architecture.md  web-ui.md
src/nano_claude/: agent.py  cli.py  config.py  index.html  llm.py  message.py  plan-view.html  session.py  setup.py  sub_agent.py  tool.py  ui.py  webui.py
src/nano_claude/tools/: __init__.py  apply_patch.py  bash.py  bash.txt  codesearch.py  codesearch.txt  delegate.py  delegate.txt  edit.py  edit.txt  glob_.py  grep.py  grep.txt  question.py  read.py  read.txt  skill.py  skill.txt  todowrite.py  todowrite.txt  webfetch.py  websearch.py  write.py  write.txt
src/toy_agent/: agent.py  cli.py  config.py  llm.py  session.py  setup.py  tool.py
src/toy_agent/tools/: __init__.py  bash.py  codesearch.py  edit.py  exa_client.py  glob_.py  glob_.txt  grep.py  read.py  read.txt  webfetch.py  webfetch.txt  websearch.py  websearch.txt  write.py  write.txt
tests/: test_agent.py
