[project]
name = "toy-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
toy-agent = "toy_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.toy-agent]
model = "gpt-4o"
timeout = 120
max_token_limit = 100000

[tool.toy-agent.providers.deepseek]
api_key_env = "DEEPSEEK_API_KEY"
base_url = "https://api.deepseek.com/v1"
default_model = "deepseek-chat"

[tool.toy-agent.providers.openai]
api_key_env = "OPENAI_API_KEY"
default_model = "gpt-4o"

[tool.toy-agent.providers.anthropic]
api_key_env = "ANTHROPIC_API_KEY"
base_url = "https://api.anthropic.com/v1"
default_model = "claude-sonnet-4-20250514"

[tool.toy-agent.providers.ollama]
base_url = "http://localhost:11434/v1"
default_model = "llama3"
