[project]
name = "nanoClaude"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
nano-claude = "nano_claude.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.nano-claude]
model = "gpt-4o"
timeout = 120
max_token_limit = 100000

[tool.nano-claude.providers.deepseek]
api_key_env = "DEEPSEEK_API_KEY"
base_url = "https://api.deepseek.com/v1"
default_model = "deepseek-chat"

[tool.nano-claude.providers.openai]
api_key_env = "OPENAI_API_KEY"
default_model = "gpt-4o"

[tool.nano-claude.providers.anthropic]
api_key_env = "ANTHROPIC_API_KEY"
base_url = "https://api.anthropic.com/v1"
default_model = "claude-sonnet-4-20250514"

[tool.nano-claude.providers.ollama]
base_url = "http://localhost:11434/v1"
default_model = "llama3"
